package framework;

import java.util.Iterator;

public interface Collection {
    public Iterator creerIterateur();
}
