@startuml

title __FRAMEWORK's Class Diagram__\n

  namespace framework {
    interface framework.Collection {
        {abstract} + creerIterateur()
    }
  }
  

  namespace framework {
    class framework.CollectionDes {
        - des : De[]
        + CollectionDes()
        + ajouterDe()
        + creerIterateur()
        + getDes()
    }
  }
  

  namespace framework {
    class framework.CollectionJoueurs {
        - joueurs : Joueur[]
        + CollectionJoueurs()
        + ajouterJoueur()
        + creerIterateur()
        + getJoueurs()
    }
  }
  

  namespace framework {
    class framework.De {
        - faceActuelle : int
        - nbFaces : int
        + De()
        + compareTo()
        + getFaceActuelle()
        + lancer()
    }
  }
  

  namespace framework {
    interface framework.Fabrique {
        {abstract} + getDe()
        {abstract} + getJeu()
        {abstract} + getJoueur()
    }
  }
  

  namespace framework {
    class framework.IterateurDes {
        - position : int
        + IterateurDes()
        + hasNext()
        + next()
        + reset()
    }
  }
  

  namespace framework {
    class framework.IterateurJoueurs {
        - position : int
        + IterateurJoueurs()
        + hasNext()
        + next()
        + reset()
    }
  }
  

  namespace framework {
    abstract class framework.Jeu {
        - nbTours : int
        + Jeu()
        + calculerLeVainqueur()
        + calculerScoreTour()
        + getIterateurDes()
        + getIterateurJoueurs()
        + getNbTours()
        + initialiserJeu()
        + jouer()
        + setIterateurDes()
        + setIterateurJoueurs()
        {abstract} # initialiserDes()
        {abstract} # initialiserJoueurs()
    }
  }
  

  namespace framework {
    class framework.Joueur {
        - nom : String
        - score : int
        + Joueur()
        + ajouterPoints()
        + compareTo()
        + enleverPoints()
        + getNom()
        + getScore()
    }
  }
  

  namespace framework {
    interface framework.Strategie {
        {abstract} + calculerLeVainqueur()
        {abstract} + calculerScoreTour()
    }
  }
  

  framework.CollectionDes .up.|> framework.Collection
  framework.CollectionJoueurs .up.|> framework.Collection
  framework.De .up.|> java.lang.Comparable
  framework.IterateurDes .up.|> java.util.Iterator
  framework.IterateurDes o-- framework.CollectionDes : collectionDes
  framework.IterateurJoueurs .up.|> java.util.Iterator
  framework.IterateurJoueurs o-- framework.CollectionJoueurs : collectionJoueurs
  framework.Jeu o-- framework.IterateurDes : iterateurDes
  framework.Jeu o-- framework.IterateurJoueurs : iterateurJoueurs
  framework.Jeu o-- framework.Strategie : strategieScore
  framework.Joueur .up.|> java.lang.Comparable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
